Update deps and setup releases